--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <title>Stick Notes</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="popup.css" />
   </head>
 
   <body>
@@ -13,21 +13,21 @@
       <div class="main-color-background">
         <div class="main-color">
           <div>
-            <input type="button" id="btn-yellow" value="+" />
+            <button class="btn-yellow">+</button>
           </div>
           <div>
-            <input type="button" id="btn-green" value="+" />
+            <button class="btn-green">+</button>
           </div>
           <div>
-            <input type="button" id="btn-pink" value="+" />
+            <button class="btn-pink">+</button>
           </div>
           <div>
-            <input type="button" id="btn-blue" value="+" />
+            <button class="btn-blue">+</button>
           </div>
         </div>
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="popup.js"></script>
   </body>
 </html>
