extension version finale

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -29,5 +29,7 @@
     </div>
 
     <script src="popup.js"></script>
+    <script src="callFunction.js"></script>
+    <script src="/background.js"></script>
   </body>
 </html>
